<resources>
    <string name="app_name">Movies</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movies_text">Movies</string>
    <string name="avengers_end_game">Avengers: \nEnd Game</string>
    <string name="back"><![CDATA[<   Back]]></string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="_125_reviews">125 reviews</string>
    <string name="storyline">Storyline</string>
    <string name="story"><![CDATA[After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.]]></string>
    <string name="robert_downey_jr">Robert \nDowney Jr.</string>
    <string name="chris_evans_text">Chris Evans</string>
    <string name="mark_ruffalo_text">Mark \nRuffalo</string>
    <string name="chris_hemsworth_text">Chris \nHemsworth</string>
    <string name="movie_details">Movie Details</string>
    <string name="movies_list">Movies list</string>
    <string name="_13plus">13+</string>
    <string name="_16plus">16+</string>
    <string name="_137_min">137 min</string>
    <string name="avengers_end_game_line">Avengers: End Game</string>
    <string name="tenet">Tenet</string>
    <string name="_98_reviews">98 reviews</string>
    <string name="action_sci_fi_thriller">Action, Sci-Fi, Thriller</string>
    <string name="_97_min">97 min</string>
    <string name="_102_min">102 min</string>
    <string name="action_adventure_sci_fi">Action, Adventure, Sci-Fi</string>
    <string name="black_window">Black Window</string>
    <string name="_120_min">120 min</string>
    <string name="wonder_woman_1984">Wonder Woman 1984</string>
    <string name="_74_reviews">74 reviews</string>
    <string name="Cast">Cast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <plurals name="review">
        <item quantity="one">%d review</item>
        <item quantity="other">%d reviews</item>
    </plurals>
</resources>