<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_movie_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/activity_movie_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingBottom="@dimen/space8x"
        tools:context=".MovieDetailsActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/space4x" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/space4x" />

        <ImageView
            android:id="@+id/movie_pic_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/moviePosterHeight_details"
            android:scaleType="centerCrop"
            android:src="@drawable/movie_"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/mask_details"
            android:layout_width="match_parent"
            android:layout_height="@dimen/moviePosterHeight_details"
            android:src="@drawable/shape"
            app:layout_constraintBottom_toBottomOf="@id/movie_pic_details"
            app:layout_constraintEnd_toEndOf="@id/movie_pic_details"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/movie_pic_details"
            android:visibility="visible"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="362dp" />

        <TextView
            android:id="@+id/activity_movie_details_back_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/space0.5x"
            android:layout_marginTop="@dimen/marginTop_BackButton"
            android:text="@string/back"
            android:theme="@style/text_12sp_gray"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_age_details"
            android:layout_width="@dimen/space6x"
            android:layout_height="@dimen/space4x"
            android:layout_marginStart="@dimen/space4x"
            android:layout_marginTop="@dimen/marginTop_age"
            android:text="@string/_13plus"
            android:theme="@style/text_12sp_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_name_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop_header"
            android:lines="2"
            android:text="@string/avengers_end_game"
            android:theme="@style/text_header"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/movie_genre_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_adventure_fantasy"
            android:theme="@style/text_14sp_red"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/guideline1" />

        <me.zhanghai.android.materialratingbar.MaterialRatingBar
            android:id="@+id/ratingBar_details"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rating="4"
            android:theme="@style/RatingBar"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toTopOf="@id/movie_reviews_details" />

        <TextView
            android:id="@+id/movie_reviews_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space4x"
            android:paddingEnd="@dimen/space4x"
            android:text="@string/_125_reviews"
            android:theme="@style/text_14sp_gray_bold_uppercase"
            app:layout_constraintBottom_toBottomOf="@id/guideline1"
            app:layout_constraintStart_toEndOf="@+id/ratingBar_details" />

        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space7x"
            android:text="@string/storyline"
            android:theme="@style/text_14sp_white_bold"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/movie_genre_details" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/space"
            android:text="@string/story"
            android:theme="@style/text_14sp_white"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/storyline" />

        <TextView
            android:id="@+id/casts"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space6x"
            android:text="@string/Cast"
            android:theme="@style/text_14sp_white_bold"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@id/overview" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerView_details"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/casts"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          android:orientation="horizontal"
          />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


